# DiscreteFinalFA2024

./: .gitignore  README.md  generate_fasta_mst.py  hello.py  kruskal_algorithm.py  main.py  output.fasta  output.fasta.csv  prims_algorithm.py  pyproject.toml  utils.py
csvs/: coverage_0.03125_k11.csv  coverage_0.0625_k11.csv  mst_kruskal_coverage_0.0625.csv  mst_kruskal_coverage_0.125.csv  mst_kruskal_coverage_0.5.csv  mst_prim_coverage_0.0625.csv  mst_prim_coverage_0.5.csv  mst_prim_coverage_1.csv
distance/: coverage_0.0625_k31.phy  coverage_0.125_k11.phy  coverage_0.25_k11.phy
save/csvs/: coverage_0.015625_k11.csv  coverage_0.0625_k31.csv  coverage_0.125_k11.csv  coverage_0.25_k11.csv  coverage_0.5_k11.csv  coverage_1_k11.csv  mst_kruskal_coverage_0.015625.csv  mst_kruskal_coverage_0.03125.csv  mst_kruskal_coverage_0.25.csv  mst_kruskal_coverage_1.csv  mst_prim_coverage_0.015625.csv  mst_prim_coverage_0.03125.csv  mst_prim_coverage_0.125.csv  mst_prim_coverage_0.25.csv
save/distance/: coverage_0.015625_k11.phy  coverage_0.03125_k11.phy  coverage_0.0625_k11.phy  coverage_0.5_k11.phy  coverage_1_k11.phy
