[project]
name = "discretefinalfa2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bio>=1.7.1",
    "jellyfish>=1.1.3",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "psutil>=6.1.0",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]
